[gd_scene load_steps=6 format=2]

[ext_resource path="res://Icons/Types/Integer.png" type="Texture" id=1]
[ext_resource path="res://Icons/Types/float.png" type="Texture" id=2]
[ext_resource path="res://Icons/Types/boolean.png" type="Texture" id=3]
[ext_resource path="res://Icons/Types/string.png" type="Texture" id=4]
[ext_resource path="res://Scripts/change_type.gd" type="Script" id=5]

[node name="Control" type="Control"]
script = ExtResource( 5 )

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 428.0
margin_bottom = 31.0
text = "Choose Type:
"
align = 1

[node name="GridContainer" type="GridContainer" parent="HBoxContainer"]
margin_top = 35.0
margin_right = 428.0
margin_bottom = 307.0
columns = 3

[node name="IntegerBtn" type="Button" parent="HBoxContainer/GridContainer"]
margin_right = 140.0
margin_bottom = 134.0
icon = ExtResource( 1 )

[node name="FloatBtn" type="Button" parent="HBoxContainer/GridContainer"]
margin_left = 144.0
margin_right = 284.0
margin_bottom = 134.0
icon = ExtResource( 2 )

[node name="BoolBtn" type="Button" parent="HBoxContainer/GridContainer"]
margin_left = 288.0
margin_right = 428.0
margin_bottom = 134.0
icon = ExtResource( 3 )

[node name="StringBtn" type="Button" parent="HBoxContainer/GridContainer"]
margin_top = 138.0
margin_right = 140.0
margin_bottom = 272.0
icon = ExtResource( 4 )

[connection signal="button_down" from="HBoxContainer/GridContainer/IntegerBtn" to="." method="_on_IntegerBtn_button_down"]
[connection signal="button_down" from="HBoxContainer/GridContainer/FloatBtn" to="." method="_on_FloatBtn_button_down"]
[connection signal="button_down" from="HBoxContainer/GridContainer/BoolBtn" to="." method="_on_BoolBtn_button_down"]
[connection signal="button_down" from="HBoxContainer/GridContainer/StringBtn" to="." method="_on_StringBtn_button_down"]
