extends Control


# Declare member variables here. Examples:
# var a = 2
# var b = "text"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass


func _on_IntegerBtn_button_down():
	pass # Replace with function body.
	


func _on_FloatBtn_button_down():
	pass # Replace with function body.


func _on_BoolBtn_button_down():
	pass # Replace with function body.


func _on_StringBtn_button_down():
	pass # Replace with function body.
